--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,13 +4,13 @@ pan_tilt:
       - joint_pan
       - joint_tilt
     joint_ids: [12, 13]
-    joy_axes: [0, 1]
-    stop_button: 4
+    joy_axes: [0, 1] # left joy horizontal, vertical
+    stop_button: 4 # L1
     mid_pos: [2048, 2048]
     min_pos: [1536, 1536]
     max_pos: [2560, 2560]
     drive_mode: 0
-    speed: 4500
-    acceleration: 255
+    speed: 4500 # steps / second
+    acceleration: 255 # 0 - 255
     usb_port: /dev/ttyACM0
     baud_rate: 1000000
