--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,6 +4,7 @@ pan_tilt_node:
       - joint_pan
       - joint_tilt
     joint_ids: [12, 13]
+    joy_topic: /joy
     joy_axes: [0, 1] # left joy horizontal, vertical
     stop_button: 4 # L1
     mid_pos: [2048, 2048]
@@ -12,5 +13,5 @@ pan_tilt_node:
     drive_mode: 0
     speed: 4500 # steps / second
     acceleration: 255 # 0 - 255
-    usb_port: /dev/ttyACM1
+    usb_port: /dev/ttySERVO
     baud_rate: 1000000
