--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,12 +4,13 @@ pan_tilt_node:
       - joint_pan
       - joint_tilt
     joint_ids: [12, 13]
-    joy_axes: [0, 1] # left joy horizontal, vertical
+    joint_inv: [false, false]
+    joy_axes0: [2, 5] # joint_pan = L2, R2
+    joy_axes1: [7] # joint_tilt = D-pad up/down
     stop_button: 4 # L1
     mid_pos: [2048, 2048]
-    min_pos: [1280, 1600]
-    max_pos: [2816, 2816]
-    drive_mode: 0
+    min_pos: [1024, 1600]
+    max_pos: [3072, 3072]
     speed: 4500 # steps / second
     acceleration: 255 # 0 - 255
     usb_port: /dev/ttySERVO
